--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Song App</title>
-	<link href="font-awesome.css" rel="stylesheet" type="text/css">
-	<link href="main.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="font-awesome.css">
+	    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css">
+	    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -12,7 +13,8 @@
 			<h1>Welcome to Songify</h1>
 			<h3>Enter name to access your account</h3>
 			<div class="input-wrapper">
-				<input id="name-input" placeholder="Name" type="text"> <button>Go</button>
+				<input id="name-input" placeholder="Name" type="text">
+				 <button>Go</button>
 			</div>
 		</section>
 		<div class="main">
@@ -21,48 +23,86 @@
 			</header>
 			<section class="content">
 				<audio src="song.mp3"></audio>
-				<div class="list-headers">
-					<div>
-						Title
-					</div>
-					<div>
-						Artist
-					</div>
-					<div>
-						Album
-					</div>
-					<div>
-						Duration
-					</div>
-				</div>
-				<div class="song-list">
 
-					<div class="song" id="song1">
-						<span class="song-name"></span>
-						<span class="song-artist"></span>
-						<span class="song-album"></span>
-						<span class="song-length"></span>
-					</div>
-					<div class="song" id="song2">
-						<span class="song-name"></span>
-						<span class="song-artist"></span>
-						<span class="song-album"></span>
-						<span class="song-length"></span>
-					</div>
-					<div class="song" id="song3">
-						<span class="song-name"></span>
-						<span class="song-artist"></span>
-						<span class="song-album"></span>
-						<span class="song-length"></span>
-					</div>
-					<div class="song" id="song4">
-						<span class="song-name"></span>
-						<span class="song-artist"></span>
-						<span class="song-album"></span>
-						<span class="song-length"></span>
-					</div>
+				<table id="songs">
+				                <thead class="list-headers">
+													<td> Title </td >
+													<td> Artist </td>
+													<td> Album </td>
+													<td> Duration </td>
+											</thead>
 
-					</div>
+
+													<tbody class="song-list">
+													<tr class="song" id="song1">
+													<td class="song-name"></td >
+													<td  class="song-artist"></td >
+													<td  class="song-album"></td >
+													<td  class="song-length"></td >
+											    </tr>
+
+								                    <tr class="song" id="song2">
+													<td class="song-name"></td >
+													<td  class="song-artist"></td >
+													<td  class="song-album"></td >
+													<td  class="song-length"></td >
+											    </tr>
+
+								                    <tr class="song" id="song3">
+													<td class="song-name"></td >
+													<td  class="song-artist"></td >
+													<td  class="song-album"></td >
+													<td  class="song-length"></td >
+											     </tr>
+
+								                  <tr class="song" id="song4">
+													<td class="song-name"></td >
+													<td  class="song-artist"></td >
+													<td  class="song-album"></td >
+													<td  class="song-length"></td >
+											     </tr>
+
+								                   <tr class="song" id="song5">
+													<td class="song-name"></td >
+													<td  class="song-artist"></td >
+													<td  class="song-album"></td >
+													<td  class="song-length"></td >
+											      </tr>
+
+								                  <tr class="song" id="song6">
+													<td class="song-name"></td >
+													<td  class="song-artist"></td >
+													<td  class="song-album"></td >
+													<td  class="song-length"></td >
+											      </tr>
+
+								                  <tr class="song" id="song7">
+													<td class="song-name"></td >
+													<td  class="song-artist"></td >
+													<td  class="song-album"></td >
+													<td  class="song-length"></td >
+										        </tr>
+
+								                   <tr class="song" id="song8">
+													<td class="song-name"></td >
+													<td  class="song-artist"></td >
+													<td  class="song-album"></td >
+													<td  class="song-length"></td >
+											      </tr>
+								</tbody>
+								</table>
+
+
+								<div class="current-song-wrapper">
+							<img class="current-song-image">
+							<div>
+							<p class="current-song-name"></p>
+							<p class="current-song-album"></p>
+							</div>
+							</div>
+
+
+
 
 			</section>
 			<footer>
@@ -82,7 +122,9 @@
 	</div>
 	<script src="jquery.js">
 	</script>
-	<script src="main.js"></script>
-
+<script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js">
+    </script>
+	<script src="main.js">
+	</script>
 </body>
 </html>
